Rename project to from enveil to enject
Rename project from enveil to enject

  - Package/binary name: enveil → enject
  - Config dir: .enveil/ → .enject/ (with .enveil/ fallback + migration prompt)
  - URL scheme: ev:// → en:// (with ev:// fallback + migration prompt)
  - Error type: EnveilError → EnjectError
  - All user-facing strings and docs updated
  - Backwards-compatible: existing .enveil stores and ev:// refs continue to work

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,16 +1,16 @@
 [package]
-name = "enveil"
+name = "enject"
 version = "0.1.0"
 edition = "2021"
 description = "Hide .env secrets from AI agents. Stores secrets in an encrypted local store and injects them into subprocesses at runtime — your .env file contains only symbolic references, never real values."
 license = "MIT"
-repository = "https://github.com/greatscott/enveil"
+repository = "https://github.com/greatscott/enject"
 readme = "README.md"
 keywords = ["secrets", "env", "security", "cli", "encryption"]
 categories = ["command-line-utilities", "cryptography"]
 
 [[bin]]
-name = "enveil"
+name = "enject"
 path = "src/main.rs"
 
 [dependencies]
